# screen-share

./: .gitmodules  README.md
include/: log.hpp  timestamp.hpp
screen_cap/: CMakeLists.txt  README.md  main.cc
server/: CMakeLists.txt  main.cc
